--- a/templates/credits.html
+++ b/templates/credits.html
@@ -16,9 +16,11 @@
         <article class="tile is-child notification is-dark">
           <h1 class="title">Open-Source</h1>
           <div class="content">
-            The entire source code of my website is Open-Source, licensed under <a
-              href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a
-              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io">repository</a>.
+            The entire source code of my website is Open-Source and dual licensed under <a
+              href="https://spdx.org/licenses/MIT.html">MIT License</a> and <a
+              href="https://spdx.org/licenses/Apache-2.0.html">Apache License 2.0</a>.
+            <br />
+            The project can be found in my <a href="https://github.com/Sakul6499/sakul6499.github.io">repository</a>.
           </div>
         </article>
       </div>
@@ -27,21 +29,32 @@
   <div class="columns mx-1">
     <div class="tile is-parent column">
       <article class="tile is-child notification is-danger">
-        <h1 class="title">Rocket.rs</h1>
-        <p class="subtitle">Backend</p>
+        <h1 class="title">Zola</h1>
+        <p class="subtitle">SSG (Static-Side-Generator)</p>
         <div class="content">
           <p>
-            <a href="https://rocket.rs/">Rocket.rs</a> is used for the <i>backend</i>.
-            All required files for the <i>frontend</i> are served by <a href="https://rocket.rs/">Rocket.rs</a> and
-            required data is fetched from the <i>database</i>.
-          </p>
-          <p>
-            <a href="https://rocket.rs/">Rocket.rs</a> is not only a server and client library / crate, but comes
-            powered with a lot of useful features, tools and libraries / crates included!
+            <a href="https://www.getzola.org/">Zola</a> is a SSG (Static-Side-Generator).
+            It's used as a framework for postings, but has been heavily modified.
           </p>
         </div>
       </article>
     </div>
+    <div class="tile is-parent column">
+      <article class="tile is-child notification is-warning">
+        <h1 class="title">GitHub pages</h1>
+        <p class="subtitle">Hosting</p>
+        <div class="content">
+          <p>
+            <a href="https://pages.github.com/">GitHub Pages</a> is used for hosting this website.
+          </p>
+          <p>
+            Only static websites are supported, thus we need <a href="https://www.getzola.org/">Zola</a>.
+          </p>
+        </div>
+      </article>
+    </div>
+  </div>
+  <div class="columns mx-1">
     <div class="tile is-parent column">
       <article class="tile is-child notification is-success">
         <h1 class="title">Bulma</h1>
@@ -64,33 +77,14 @@
         </div>
       </article>
     </div>
-  </div>
-  <div class="columns mx-1">
-    <div class="tile is-parent column">
-      <article class="tile is-child notification is-warning">
-        <h1 class="title">Diesel.rs</h1>
-        <p class="subtitle">Data-Layer</p>
-        <div class="content">
-          <p>
-            <a href="https://diesel.rs/">Diesel.rs</a> is used for the <i>data-layer</i>.
-            <a href="https://diesel.rs/">Diesel.rs</a> is <b>not</b> a <i>database</i> on its own, but can be used to
-            connect to different <i>databases</i> and make queries easier.
-          </p>
-          <p>
-            <a href="https://diesel.rs/">Diesel.rs</a> makes it incredibly easy to create a schema and use it without
-            restrictions.
-            <a href="https://diesel.rs/">Diesel.rs</a> also integrates with <a href="https://rocket.rs/">Rocket.rs</a>
-          </p>
-        </div>
-      </article>
-    </div>
     <div class="tile is-parent column">
       <article class="tile is-child notification is-info">
         <h1 class="title">Tera</h1>
         <p class="subtitle">Template Engine</p>
         <div class="content">
           <p>
-            <a href="https://tera.netlify.app/">Tera</a> is used as a template engine for the <i>frontend</i>.
+            <a href="https://tera.netlify.app/">Tera</a> is used as a template engine by <a
+              href="https://www.getzola.org/">Zola</a>.
           </p>
           <p>
             Using templates makes it possible to reuse a lot of code and split the website into multiple parts /
@@ -131,22 +125,12 @@
     </div>
     <div class="tile is-parent column">
       <article class="tile is-child notification is-dark">
-        <h1 class="title">And many more ...</h1>
-        <p class="subtitle">Rust crates</p>
+        <h1 class="title">And probably more ...</h1>
+        <p class="subtitle">Dependencies</p>
         <div class="content">
           <p>
-            This entire website is build with <a href="https://www.rust-lang.org/">Rust</a>.
-          </p>
-          <p>
-            Even the client-library is written in <a href="https://www.rust-lang.org/">Rust</a> and compiled to <a
-              href="https://webassembly.org/">WASM</a>.
-          </p>
-          <p>
-            There are soooooo many different crates I am using, and even more crates that other crates depend on.
-            Currently, there are, per-project, over 200 crates in use.
-            If you want to know more check out the <a
-              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">repository</a> and compile the code
-            yourself!
+            To see everything this website is using check out <a
+              href="https://github.com/Sakul6499/sakul6499.github.io">the repository</a>.
           </p>
         </div>
       </article>
