--- a/templates/legal.html
+++ b/templates/legal.html
@@ -31,7 +31,7 @@
             <b>private</b>.
           </p>
           <p>
-            Nevertheless, communication via letters is the traditional way, but can be extremly slow.
+            Nevertheless, communication via letters is the traditional way, but can be extremely slow.
             I am also not feeling confident with putting out my <b>private address</b> here.
           </p>
           <p>
@@ -41,10 +41,10 @@
           </p>
           <p>
             If you insist on sending me a letter:<br />
-            Either, scan the letter and attach it to the <a href="mailto:webmaster@sakul6499.de">email</a>, or, request
-            my address via <a href="mailto:webmaster@sakul6499.de">email</a>.
+            Either, scan the letter and attach it to the <a href="mailto:privacy@sakul-flee.de">email</a>, or, request
+            my address via <a href="mailto:privacy@sakul-flee.de">privacy@sakul-flee.de</a>.
             However, such a request must follow a <b>valid</b> and <b>strong</b> reason to be accepted.
-            <b>Anything that can be done via <a href="mailto:webmaster@sakul6499.de">email</a> and <underline>does not
+            <b>Anything that can be done via <a href="mailto:privacy@sakul-flee.de">email</a> and <underline>does not
               </underline> require my address <underline>will be denied.</underline></b>
           </p>
           <p>
@@ -55,9 +55,9 @@
         <div class="column is-half">
           <div class="is-size-5 is-family-code">Contact information</div>
           <span>
-            <b>E-Mail</b>: <a href="mailto:me@sakul6499.de">me@sakul6499.de</a><br />
+            <b>E-Mail</b>: <a href="mailto:privacy@sakul-flee.de">privacy@sakul-flee.de</a><br />
             or<br />
-            <b>E-Mail</b>: <a href="mailto:webmaster@sakul6499.de">webmaster@sakul6499.de</a>
+            <b>E-Mail</b>: <a href="mailto:me@sakul-flee.de">me@sakul-flee.de</a>
           </span>
           <br />
           <br />
@@ -74,7 +74,7 @@
           <br />
           <br />
           <span>
-            And <b>any</b> other methods as described on <a href="/contact">my contact page</a>.
+            See also my <a href="/contact">contact page</a>.
           </span>
         </div>
       </div>
