--- a/templates/credits.html
+++ b/templates/credits.html
@@ -72,7 +72,7 @@
             I still added some things myself and modified some of the component, but this websites design-core is <a
               href="https://bulma.io/">Bulma</a>.
             If you are interested in my changes check out the style-sheets <a
-              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">on my repository</a>.
+              href="https://github.com/Sakul6499/sakul6499.github.io">on my repository</a>.
           </p>
         </div>
       </article>
