Posting List and View is working

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,15 +1,9 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
-      <span class="title is-5">@Sakul6499 | Lukas Weber</span>
+      <span class="title is-5">@SakulFlee | @Sakul6499 | Lukas Weber</span>
     </a>
-    <a
-      role="button"
-      class="navbar-burger burger"
-      aria-label="menu"
-      aria-expanded="false"
-      data-target="main-nav"
-    >
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-nav">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
