--- a/templates/posting-view.html
+++ b/templates/posting-view.html
@@ -54,7 +54,7 @@
   </section>
 
   <div class="card m-4">
-    <div class="card-content">
+    <div class="card-content content">
       {{ page.content | safe }}
     </div>
 </article>
