--- a/templates/components/page-list.html
+++ b/templates/components/page-list.html
@@ -38,7 +38,7 @@
     </p>
     <p class="card-footer-item">
       <span>
-        <a href="{{ page.permalink }}">Read more</a>
+        <a href="{{ page.path }}">Read more</a>
       </span>
     </p>
   </footer>
