Added note about Akimo project

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <section class="hero is-dark is-fullheight-with-navbar">
-  <div class="hero-head">
+  <div class="hero-head m-2">
+    <div class="notification">
+      Looking for <i>Akimo-Project: Engine</i>? <a href="/engine">Click here!</a>
+    </div>
   </div>
   <div class="hero-body">
     <div class="container has-text-centered">
