Improved note about engine

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-head m-2">
     <div class="notification">
-      Looking for <i>Akimo-Project: Engine</i>? <a href="/engine">Click here!</a>
+      Looking for <i>Akimo-Project: Engine</i>? 
+      <a href="/engine">Click here</a> for the latests release!
     </div>
   </div>
   <div class="hero-body">
