Added beta engine

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <div class="hero-head m-2">
     <div class="notification">
       Looking for <i>Akimo-Project: Engine</i>? 
-      <a href="/engine">Click here</a> for the latests release!
+      <a href="/engine">Click here</a> for the latests release or <a href="/engine-beta">here</a> for the latest beta!
     </div>
   </div>
   <div class="hero-body">
