Removed old tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             Hello, world!
           </h1>
           <h2 class="has-text-white subtitle">
-            I am @Sakul6499 | @SakulFlee | Lukas Weber.
+            I am @SakulFlee | Lukas Weber.
           </h2>
           <p class="has-text-white is-family-code">
             Software Engineer Student
