Added a warning for maintenance

--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -18,7 +18,7 @@
     {% elif post %}
     {{ post.title }}
     {% else %}
-    @Sakul6499 | Lukas Weber
+    @SakulFlee | @Sakul6499 | Lukas Weber
     {% endif %}
     {% endblock title %}
 </title>
