Updated badges on main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,49 +16,19 @@
             Software Engineer Student
           </p>
         </div>
-
-        <div class="column is-6 is-offset-3">
-          <article class="message is-warning has-text-centered">
-            <div class="message-header">
-              <p>Maintenance warning!</p>
-            </div>
-            <div class="message-body">
-              This website is under maintenance.<br />
-              Select parts will be unavailable and some information may be outdated.<br />
-              <br />
-              Please check back later.<br />
-              ETA: Unknown<br />
-            </div>
-        </div>
-        </article>
       </div>
 
-      <div class="is-vcentered">
-        <ul>
-          <li class="icon p-icon">
-            {% include "components/svg/github.html" %}
-          </li>
-          <li class="icon p-icon">
-            {% include "components/svg/mail.html" %}
-          </li>
-        </ul>
-        <div class="buttons columns mt-6">
-          <a href="/blog" class="button is-large is-white is-outlined column is-4">
-            <span class="icon is-large">
-              <i class="fas fa-book"></i>
-            </span>
-            <span>Blog</span>
-          </a>
-          <span class="column"></span>
-          <a href="/projects" class="button is-large is-white is-outlined column is-4 is-pulled-right">
-            <span class="icon is-large">
-              <i class="fas fa-code-branch"></i>
-            </span>
-            <span>Projects</span>
-          </a>
-        </div>
+      <div class="is-vcentered mt-6 pt-6">
+        <img class="pl-2 pr-2" src="https://img.shields.io/badge/Forgejo-Projects-orange?style=for-the-badge&logo=forgejo&link=https%3A%2F%2Fforgejo.sakul-flee.de%2FSakulFlee%2F" alt="Badge">
+        <img class="pl-2 pr-2" src="https://img.shields.io/badge/GitHub-Mirror-blue?style=for-the-badge&logo=github&link=https%3A%2F%2Fgithub.com%2FSakulFlee%2F" alt="Badge">
+        <img class="pl-2 pr-2" src="https://img.shields.io/badge/Contact-Mail-purple?style=for-the-badge&logo=gmail&link=mailto%3Al.weber%40sakul-flee.de" alt="Badge">
+        <img class="pl-2 pr-2" src="https://img.shields.io/badge/LinkedIn-Profile-blue?style=for-the-badge&logo=linkedin&link=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fsakulflee%2F" alt="Badge">
+      </div>
 
-        {% include "components/scroll-down.html" %}
+      <div class="is-vcentered mt-6 pt-6">
+        <div class="is-vcentered mt-6 pt-6">
+          {% include "components/scroll-down.html" %}
+        </div>
       </div>
     </div>
   </div>
