--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
-      <span class="title is-5">@SakulFlee | @Sakul6499 | Lukas Weber</span>
+      <span class="title is-5">@SakulFlee | Lukas Weber</span>
     </a>
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-nav">
       <span aria-hidden="true"></span>
@@ -23,7 +23,7 @@
         </span>
         <span>Blog</span>
       </a>
-      <a class="navbar-item" href="/projects">
+      <a class="navbar-item" href="https://forgejo.sakul-flee.de/SakulFlee/">
         <span class="icon is-large">
           <i class="fas fa-code-branch"></i>
         </span>
