--- a/templates/components/about_me.html
+++ b/templates/components/about_me.html
@@ -12,7 +12,7 @@
       {% set age = current_year - birth_year %}
       {% if current_month < 4%} {% set age=age - 1 %} {% elif current_day < 6 %} {% set age=age - 1 %} {% endif %} <p>
         Hello there! My name is Lukas
-        Weber (@SakulFlee | @Sakul6499) and I am {{ age }} years old. </p>
+        Weber (@SakulFlee) and I am {{ age }} years old. </p>
         <p>
           I am from Germany and study <i>Software Engineering</i> in the Netherlands.
         </p>
