--- a/templates/components/timeline.html
+++ b/templates/components/timeline.html
@@ -2,30 +2,129 @@
   <u class="is-half is-family-code has-text-underlined">Timeline</u>
 
   <span class="columns">
-    <span class="column is-3">2005</span>
+    <span class="column is-3">2025</span>
     <span class="column is-9">
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        Start of everything
+      <div class="is-black tag is-large tooltip has-tooltip-black is-tooltip-multiline has-text-white"
+        data-tooltip="Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
+        Continuation of studies
       </div>
+      <div class="line solid"></div>
+
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="Chronic health condition, taking me out for years :(">
+        Health break
+      </div>
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+  <span class="columns">
+    <span class="column is-3">2021</span>
+    <span class="column is-9">
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="Analyzing pigs vocality with sound-based AI-Analysis">
+        AI Research Project
+      </div>
+
       <div class="line dotted"></div>
     </span>
   </span>
 
   <span class="columns">
-    <span class="column is-3">2009</span>
+    <span class="column is-3">2020</span>
     <span class="column is-9">
-      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
-        data-tooltip="Beginning of my programming knowledge">
-        Started with Java and WEB
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="An amazing experience at Vodafone Germany">
+        Internship
       </div>
 
       <div class="line solid"></div>
 
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Beginning of my programming knowledge">
-        First look into Linux
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="My team created the best android app!">
+        Best 4th semester uni project
       </div>
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+  <span class="columns">
+    <span class="column is-3">2019</span>
+    <span class="column is-9">
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="Compared to other groups, very advanced traffic light simulations">
+        Best 3rd semester uni project
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="One of the best three-tier business application!">
+        Best 2nd semester uni project
+      </div>
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2018</span>
+    <span class="column is-9">
+      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
+        data-tooltip="Starting point of learning rust">
+        Started with Rust
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="My team got voted the best first semester project!">
+        Best 1st semester uni project
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="Right before starting my study!">
+        Dutch certificate
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="Right before starting my study!">
+        University enrollment
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
+        data-tooltip="[2015-2018] German secondary school education, completed with vocational diploma.">
+        Secondary education
+      </div>
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+  <span class="columns">
+    <span class="column is-3">2015</span>
+    <span class="column is-9">
+      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
+        data-tooltip="[2009-2015] German primary school education, completed with allowance for secondary school education.">
+        Primary education finished
+      </div>
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+  <span class="columns">
+    <span class="column is-3">2014</span>
+    <span class="column is-9">
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="Finished my LCCI business english certificate">
+        LCCI certificate
+      </div>
+
       <div class="line dotted"></div>
     </span>
   </span>
@@ -40,6 +139,13 @@
 
       <div class="line solid"></div>
 
+      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
+        data-tooltip="Beginning of my programming knowledge">
+        Started with Java
+      </div>
+
+      <div class="line solid"></div>
+
       <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
         data-tooltip="I loved this language since the beginning!">
         Started learning Japanese
@@ -50,126 +156,31 @@
   </span>
 
   <span class="columns">
-    <span class="column is-3">2014</span>
+    <span class="column is-3">2009</span>
     <span class="column is-9">
-      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
-        data-tooltip="Finished my LCCI business english certificate">
-        LCCI certificate
-      </div>
-
-      <div class="line dotted"></div>
-    </span>
-  </span>
-
-  <span class="columns">
-    <span class="column is-3">2015</span>
-    <span class="column is-9">
-      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
-        data-tooltip="[2009-2015] German primary school education, completed with allowance for secondary school education.">
-        Primary education
-      </div>
-
-      <div class="line dotted"></div>
-    </span>
-  </span>
-
-  <span class="columns">
-    <span class="column is-3">2018</span>
-    <span class="column is-9">
-      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
-        data-tooltip="Right before starting my study!">
-        Dutch certificate
-      </div>
-
-      <div class="line solid"></div>
-
       <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
-        data-tooltip="Starting point of learning rust">
-        Started with Rust
+        data-tooltip="Beginning of my programming knowledge">
+        Dive into Web-Technologies
       </div>
 
-      <div class="line solid"></div>
+      <div class="line dotted"></div>
 
-      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
-        data-tooltip="[2015-2018] German secondary school education, completed with vocational diploma.">
-        Secondary education
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Beginning of my programming knowledge">
+        First look into Linux
       </div>
-
-      <div class="line solid"></div>
-
-      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="My team got voted the best first semester project!">
-        Best 1st semester uni project
-      </div>
-
       <div class="line dotted"></div>
     </span>
   </span>
 
   <span class="columns">
-    <span class="column is-3">2019</span>
+    <span class="column is-3">2005</span>
     <span class="column is-9">
-      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="One of the best three-tier business application!">
-        Best 2nd semester uni project
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, windows and eventually visual basic and basic HTML">
+        Start of coding journey
       </div>
-
-      <div class="line solid"></div>
-
-      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="Compared to other groups, very advanced traffic light simulations">
-        Best 3rd semester uni project
-      </div>
-
       <div class="line dotted"></div>
-    </span>
-  </span>
-
-  <span class="columns">
-    <span class="column is-3">2020</span>
-    <span class="column is-9">
-      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="My team created the best android app!">
-        Best 4th semester uni project
-      </div>
-
-      <div class="line solid"></div>
-
-      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="An amazing experience at Vodafone Germany">
-        Internship
-      </div>
-
-      <div class="line dotted"></div>
-    </span>
-  </span>
-
-  <span class="columns">
-    <span class="column is-3">2021</span>
-    <span class="column is-9">
-      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Analyzing pigs vocality with sound-based AI-Analysis">
-        AI Research Project
-      </div>
-
-      <div class="line dotted"></div>
-    </span>
-  </span>
-
-  <span class="columns">
-    <span class="column is-3">Future</span>
-    <span class="column is-9">
-      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Not yet sure what ...">
-        Minor
-      </div>
-
-      <div class="line solid"></div>
-
-      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
-        Bachelor of Applied Sciences
-      </div>
     </span>
   </span>
 </div>
