--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,15 +23,15 @@
             <div class="media-content">
               <p class="title is-4">Mail</p>
               <p class="subtitle is-6">
-                <a href="mailto:me@sakul-flee.de" class="has-text-grey-dark">
+                <a href="mailto:l.weber@sakul-flee.de" class="has-text-grey-dark">
                   me@sakul-flee.de
                 </a>
               </p>
             </div>
           </div>
           <div class="content">
-            Please use my email <b>only</b> for professional and content related contact requests. Encrypted messages
-            are preferred!
+            <p>Please use my email <b>only</b> for professional and content related contact requests.</p>
+            <p>Encrypted messages are preferred!</p>
             Check out my <a
               href="https://keys.openpgp.org/vks/v1/by-fingerprint/8D06E501A6AF1FCF3AD0BECBDECCEB57F104C497">public
               key</a>.
