Minor phrasing change in continuation of studies timeline

--- a/templates/components/timeline.html
+++ b/templates/components/timeline.html
@@ -5,7 +5,7 @@
     <span class="column is-3">2025</span>
     <span class="column is-9">
       <div class="is-black tag is-large tooltip has-tooltip-black is-tooltip-multiline has-text-white"
-        data-tooltip="Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
+        data-tooltip="After a longer health brake I am fueled with new motivation to complete my studies!">
         Continuation of studies
       </div>
       <div class="line solid"></div>
